//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  username String [unique, not null]
  email String [unique, not null]
  phone String [not null]
  password String [not null]
  role UserRole [not null]
  avatar String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Role {
  id Int [pk, increment]
  name String [unique, not null]
  users UserRole [not null]
  Permissions RolePermission [not null]
}

Table Permission {
  id Int [pk, increment]
  code String [unique, not null]
  name String [not null]
  roles RolePermission [not null]
  menuButtons MenuButton [not null]
}

Table UserRole {
  userId Int [not null]
  roleId Int [not null]
  user User [not null]
  role Role [not null]

  indexes {
    (userId, roleId) [pk]
  }
}

Table RolePermission {
  roleId Int [not null]
  permissionId Int [not null]
  role Role [not null]
  permission Permission [not null]

  indexes {
    (roleId, permissionId) [pk]
  }
}

Table Menu {
  id Int [pk, increment]
  parentId Int [default: 0]
  name String [not null]
  path String
  component String
  icon String
  sort Int [default: 0]
  type Int [not null, default: 2]
  buttons MenuButton [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table MenuButton {
  id Int [pk, increment]
  menuId Int [not null]
  menu Menu [not null]
  permissionId Int [not null]
  permission Permission [not null]
  name String
  sort Int [default: 0]

  indexes {
    (menuId, permissionId) [unique]
  }
}

Ref: UserRole.userId > User.id

Ref: UserRole.roleId > Role.id

Ref: RolePermission.roleId > Role.id

Ref: RolePermission.permissionId > Permission.id

Ref: MenuButton.menuId > Menu.id [delete: Cascade]

Ref: MenuButton.permissionId > Permission.id